--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,24 +1,24 @@
 name: deploy
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - master
 
 jobs:
-    build-and-deploy:
-        runs-on: ubuntu-latest
-        steps:
+  deploy:
+    runs-on: ubuntu-18.04
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
       - name: Build web-app
         run: |
           npm ci
           npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
-              env:
-                  COMMIT_EMAIL: lipemg01@gmail.com
-                  ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-                  BASE_BRANCH: main
-                  DEPLOY_BRANCH: gh-pages
-                  BUILD_SCRIPT: yarn && yarn build
-                  FOLDER: build
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
